--- a/DeviceMessageReciever/project.json
+++ b/DeviceMessageReciever/project.json
@@ -6,7 +6,7 @@
   },
   "userSecretsId":"Warmer.DeviceSimulator",
   "dependencies": {
-    "Microsoft.Azure.Devices.Client": "1.2.2",
+    "WindowsAzure.ServiceBus": "3.4.5",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0-rc2-final"
   },
   "frameworks": {
