--- a/WebDashboard/project.json
+++ b/WebDashboard/project.json
@@ -19,7 +19,9 @@
     "Microsoft.Extensions.Configuration.UserSecrets": "1.2.0-preview1-23225",
     "Microsoft.Extensions.Logging": "1.2.0-preview1-23225",
     "Microsoft.Extensions.Logging.Console": "1.2.0-preview1-23225",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.2.0-preview1-23225"
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.2.0-preview1-23225",
+    "Microsoft.AspNetCore.SignalR.Server": "0.2.0-*",
+    "Microsoft.AspNetCore.WebSockets": "0.2.0-*"
   },
 
   "frameworks": {
