--- a/.gitignore
+++ b/.gitignore
@@ -275,3 +275,9 @@ __pycache__/
 # !tools/packages.config
 
 .vscode
+/WarmerMicro/__vm/Compile.vmps.xml
+/WarmerMicro/__vm/Configuration.Debug.vmps.xml
+/WarmerMicro/__vm/Upload.vmps.xml
+/WarmerMicro/WarmerMicro.vcxproj
+/WarmerMicro/WarmerMicro.vcxproj.filters
+/WarmerMicro/__vm/.WarmerMicro.vsarduino.h
