--- a/Web/Warmer.AuthorizationServer/project.json
+++ b/Web/Warmer.AuthorizationServer/project.json
@@ -5,13 +5,14 @@
       "type": "platform"
     },
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
-
     "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
     "Microsoft.Extensions.Logging.Console": "1.1.0",
     "IdentityServer4": "1.1.0",
     "Microsoft.AspNetCore.Mvc": "1.1.0",
-    "Microsoft.AspNetCore.StaticFiles": "1.1.0"
+    "Microsoft.AspNetCore.StaticFiles": "1.1.0",
+    "BCrypt.Net-Core": "1.1.0",
+    "WindowsAzure.Storage": "8.0.1"
   },
 
   "tools": {
